--- a/extensions/typeorm/package.json
+++ b/extensions/typeorm/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@loopback/build": "^5.2.0",
     "@loopback/eslint-config": "^6.0.4",
+    "@loopback/rest": "^3.3.1",
     "@loopback/testlab": "^3.1.1",
     "@types/node": "^10.17.21",
     "sqlite3": "^4.1.1"
