--- a/packages/typeorm/package.json
+++ b/packages/typeorm/package.json
@@ -29,6 +29,7 @@
     "@types/json-schema": "^7.0.5",
     "@types/lodash": "^4.14.155",
     "@types/node": "^10.17.26",
+    "@loopback/rest": "^5.1.1",
     "bson": "4.0.4"
   },
   "dependencies": {
