--- a/packages/typeorm/tsconfig.json
+++ b/packages/typeorm/tsconfig.json
@@ -14,6 +14,9 @@
       "path": "../core/tsconfig.json"
     },
     {
+      "path": "../rest/tsconfig.json"
+    },
+    {
       "path": "../testlab/tsconfig.json"
     }
   ]
