feat: generate OpenAPI spec
Generates OpenAPI spec

Signed-off-by: Yaapa Hage <hage.yaapa@in.ibm.com>

--- a/packages/typeorm/tsconfig.json
+++ b/packages/typeorm/tsconfig.json
@@ -14,6 +14,9 @@
       "path": "../core/tsconfig.json"
     },
     {
+      "path": "../openapi-v3/tsconfig.json"
+    },
+    {
       "path": "../rest/tsconfig.json"
     },
     {
