--- a/packages/typeorm/package.json
+++ b/packages/typeorm/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@loopback/core": "^2.4.1",
+    "@loopback/openapi-v3": "3.4.4",
     "tslib": "^1.11.1",
     "typeorm": "^0.2.25"
   },
